# meg_utils

./: .gitignore  CLAUDE.md  README.md  __init__.py  _synchronize_meg_utils.py  constants.py  conversion.py  data.py  dataloading.py  decoding.py  misc.py  pipeline.py  plotting.py  preprocessing.py  pyproject.toml  requirements.txt  setup.py  sigproc.py
.github/workflows/: publish-to-pypi.yml  tests.yml
meg_utils/: __init__.py  _constants.py  data.py  decoding.py  misc.py  pipeline.py  plotting.py  preprocessing.py  sigproc.py
tests/: test_decoding.py  test_misc.py  test_plotting.py  test_sigproc.py
